Fix some of the spacing issues and the kids page

--- a/sites/all/themes/lapcat/assets/less/header.less
+++ b/sites/all/themes/lapcat/assets/less/header.less
@@ -28,6 +28,7 @@
   z-index:8;
   box-shadow: inset 0 2px 2px -2px #777,2px 1px #fff;
   margin-bottom:1em;
+  position: relative; 
   .Animate(300ms);
   #menuHeader{float:left;} 
   .spc-Search{
